--- a/docs/05.02 - Logging and Monitoring DLP Policies.md
+++ b/docs/05.02 - Logging and Monitoring DLP Policies.md
@@ -24,7 +24,7 @@ I typically see environments used for production workloads well vetted and locke
 
 As documented in the article [Impact of DLP policies on apps and flows - Power Platform | Microsoft Docs](https://docs.microsoft.com/en-us/power-platform/admin/dlp-impact-policies-apps-flows#runtime-impact-on-apps-and-flows) DLP policy restrictions are enforced at both design and run time. Design time restriction is straight forward, a maker will be prompted with an error message and information to learn more. This prompt is displayed when a user attempts to add a connector to a Power App or save a Power Automate flow. Power Automate will save the flow but will keep it in a suspended state until the DLP violation is removed.
 
-<insert image>
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/DlpAndSubscriptions/dlp-conflict-error.png" />
 
 For run time usage of Power Apps, users will be prompted with a message that will inform them that the app is not compliant. This messaging can be customized using the PowerShell script mentioned below.
 
@@ -57,15 +57,35 @@ Here is an image of a custom error message a user will receive for a blocked con
 
 <insert contoso image>
 
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/Connectors/DLP/DlpPolicyNamefromUrlToPowerShell.JPG" style="zoom: 80%;" />
+
+## Karen's Example
+
+In this example Karen is building an app in the personal productivity environment to showcase her team's work within Azure DevOps.
+
+<insert karen image>
+
+She plans to show how her Power App can help reduce project managers' time to collect project updates from the team. She also plans for managers to use the tool when meeting with stakeholders to show progress and collect feedback. Everything is going great until Karen decides to use the Azure DevOps connector in the personal producitivity environment.
+
+<insert blocked by dlp policy>
+
+She reaches out to the dlp_support@contoso.com alias requesting access to use the Azure DevOps connector. The support team meet and gain approval to allow Karen to continue her work. However they aren't allowed to give her her own environment so they must come up with a way to allow Karen to continue her work in the personal productivity environment.
+
 ## Exempting Resources
 
 Exempting resources allows administrators the ability to white list an app or flow in a specific DLP policy. This is useful for business critical applications that need to continue to run using blocked connectors. This can also serve as a safe guard that this application will continue to run even if a DLP policy is changed restricting a connector used by the app or flow. 
 
 This, used in combination with the custom tenant messaging, is useful to provide granular control and access. When an admin does apply the exemption policy it is for the entire connector not just specific actions. Be mindful of what actions will be exposed. If necessary consider moving the exempted resources into their own specific environment with its own DLP policy.
 
+<insert personal prod before devops image>
+
+To allow Karen's app to use the Azure DevOps connector while restricting others in the environment to build apps and flows we can use the exempt resources command.
+
+### Governance
+
 Governance on exempted resources is extremely important and I recommend having a process that runs regularly to identify the exempted resources. If this number grows or shrinks we should alert the appropriate channels to take action. Alternatively, an automated approach can be taken to ensure non-exempted resources are allowed to be added. Let's look at the below architecture:
 
-
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/Connectors/DLP/DlpPolicyNamefromUrlToPowerShell.JPG" style="zoom: 80%;" />
 
 ## 
 
