--- a/docs/05.02 - Logging and Monitoring DLP Policies.md
+++ b/docs/05.02 - Logging and Monitoring DLP Policies.md
@@ -55,31 +55,48 @@ I would recommend using an alias for both the URL and email address. Consider a 
 
 Here is an image of a custom error message a user will receive for a blocked connector:
 
-<insert contoso image>
-
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/Connectors/DLP/DlpPolicyNamefromUrlToPowerShell.JPG" style="zoom: 80%;" />
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/DlpAndSubscriptions/PowerApps.UserOpenAppWithBlockedConnector-CustomErrorMessage.JPG" style="zoom: 80%;" />
 
 ## Karen's Example
 
 In this example Karen is building an app in the personal productivity environment to showcase her team's work within Azure DevOps.
 
-<insert karen image>
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/DlpAndSubscriptions/KarenImage.JPG" style="zoom: 80%;" />
 
 She plans to show how her Power App can help reduce project managers' time to collect project updates from the team. She also plans for managers to use the tool when meeting with stakeholders to show progress and collect feedback. Everything is going great until Karen decides to use the Azure DevOps connector in the personal producitivity environment.
 
-<insert blocked by dlp policy>
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/DlpAndSubscriptions/KarenAppBlocked.JPG" />
 
 She reaches out to the dlp_support@contoso.com alias requesting access to use the Azure DevOps connector. The support team meet and gain approval to allow Karen to continue her work. However they aren't allowed to give her her own environment so they must come up with a way to allow Karen to continue her work in the personal productivity environment.
+
+NOTE: Ideally we would have an environment for Karen to work with as described above for Power Users. I've seen where environment sprawl or capacity are concerns so in this example we are restricting environment creation.
 
 ## Exempting Resources
 
 Exempting resources allows administrators the ability to white list an app or flow in a specific DLP policy. This is useful for business critical applications that need to continue to run using blocked connectors. This can also serve as a safe guard that this application will continue to run even if a DLP policy is changed restricting a connector used by the app or flow. 
 
-This, used in combination with the custom tenant messaging, is useful to provide granular control and access. When an admin does apply the exemption policy it is for the entire connector not just specific actions. Be mindful of what actions will be exposed. If necessary consider moving the exempted resources into their own specific environment with its own DLP policy.
+This, used in combination with the custom tenant messaging, is useful to provide granular control and access. When an admin does apply the exemption policy it is for the entire app or flow. Be mindful of what actions will be exposed. If necessary consider moving the exempted resources into their own specific environment with its own DLP policy.
 
-<insert personal prod before devops image>
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/DlpAndSubscriptions/PersonalProductivity.UI.JPG" />
 
 To allow Karen's app to use the Azure DevOps connector while restricting others in the environment to build apps and flows we can use the exempt resources command.
+
+```
+$app = Get-PowerApp -EnvironmentName $environment -AppName 93425669-ff6b-4fef-bccb-4f3ef0688007 #Karen's cool app 
+$exemptApp = [pscustomobject]@{ 
+            id = $app.Internal.id 
+            type = $app.Internal.type 
+        } 
+$exemptResources = [pscustomobject]@{ 
+            exemptResources = @($exemptApp)
+        }
+
+
+New-PowerAppDlpPolicyExemptResources -TenantId $tenant -PolicyName 9e390645-f564-4734-a5a0-3b9d8221304b -NewDlpPolicyExemptResources $exemptResources
+```
+
+
+
 
 ### Governance
 
