added powershell and images

--- a/docs/05.02 - Logging and Monitoring DLP Policies.md
+++ b/docs/05.02 - Logging and Monitoring DLP Policies.md
@@ -36,7 +36,9 @@ Finally for admins, as noted by the article linked above, the flow suspension pr
 
 An obscure but very useful feature is to apply custom DLP violation messaging to a tenant. This allow admins to provide contact information to makers or users who may need access to a connector that is restricted. Also, the messaging allows for a custom URL to be provided that can be used for self-remediation, important notices, business justification, etc.
 
-To set this messaging, use the DLP SDK within the Microsoft.PowerApps.Administration PowerShell module. The specific command is called **[New-PowerAppDlpErrorSettings](https://docs.microsoft.com/en-us/power-platform/admin/powerapps-powershell#governance-error-message-content-commands)**. The command allows admins much needed flexibility to add custom messaging. The example below is used to set a tenant wide message to contact the DLP security team and a SharePoint link for business justification requests.
+To set this messaging, use the DLP SDK within the **Microsoft.PowerApps.Administration** PowerShell module. **<u>If you are new to working with Data Loss Prevention Policies within PowerShell</u>**, please take a moment to review the section '**DLP Policies and Power App Administration PowerShell**' in the "[Monitoring the Power Platform: Connectors, Connections and Data Loss Prevention Policies](https://community.dynamics.com/crm/b/crminthefield/posts/monitoring-the-power-platform-power-automate--connectors-and-connections)" article.
+
+The specific command is called **[New-PowerAppDlpErrorSettings](https://docs.microsoft.com/en-us/power-platform/admin/powerapps-powershell#governance-error-message-content-commands)**. The command allows admins much needed flexibility to add custom messaging. The example below is used to set a tenant wide message to contact the DLP security team and a SharePoint link for business justification requests.
 
 ```
 New-PowerAppDlpErrorSettings -TenantId $tenant -ErrorSettings @{  
@@ -69,7 +71,7 @@ She plans to show how her Power App can help reduce project managers' time to co
 
 She reaches out to the dlp_support@contoso.com alias requesting access to use the Azure DevOps connector. The support team meet and gain approval to allow Karen to continue her work. However they aren't allowed to give her her own environment so they must come up with a way to allow Karen to continue her work in the personal productivity environment.
 
-NOTE: Ideally we would have an environment for Karen to work with as described above for Power Users. I've seen where environment sprawl or capacity are concerns so in this example we are restricting environment creation.
+NOTE: Ideally we would have an environment for Karen to work with as described above for Power Users. [Trial based environments work very well here.](https://docs.microsoft.com/en-us/power-platform/admin/trial-environments) [Be mindful when creating these environments to apply security groups.](https://docs.microsoft.com/en-us/power-platform/admin/control-user-access) I've seen where environment sprawl or capacity are concerns so in this example we are restricting environment creation.
 
 ## Exempting Resources
 
@@ -96,16 +98,48 @@ New-PowerAppDlpPolicyExemptResources -TenantId $tenant -PolicyName 9e390645-f564
 ```
 
 
+NOTE: This could have negative effects on the reporting of apps and flows impacted in the DLP Editor v2.
+
+## Governance
+
+Governance on exempted resources is extremely important and I recommend having a process that runs regularly to identify the exempted resources. If this number grows or shrinks we should alert the appropriate channels to take action. Alternatively, an automated approach can be taken to ensure non-exempted resources are allowed to be added. Luckily, there are options ranging from no code solutions developed by the community to APIs and SDKs that can be leveraged by administrators who may be more comfortable with scripting automation.
+
+#### Center of Excellence and DLP Editor
+
+For no code solutions, take a look at the Center of Excellence toolkit. The toolkit contains the functionality that will collect connectors used by Power Apps and Power Automate flows and store within a Dataverse environment. The DLP Editor v2 allow admins to use a Power App to better understand what changes to DLP policies can impact what apps and flows. If this tool is used, be mindful that it is unsupported. Also, turn on auditing and evaluate the use of Export to Azure Synapse Analytics to help with tracking historical trends, rich analysis and data processing as well as long term storage.
+
+#### Ingesting Office 365 Management Activity API and Audit Reports with Power Automate Flow
+
+As detailed thoroughly within the "[Monitoring the Power Platform: Power Automate - Auditing and Activity Logs Part 2 - Microsoft Dynamics CRM Community](https://community.dynamics.com/crm/b/crminthefield/posts/monitoring-the-power-platform-power-automate--auditing-and-activity-logs-part-2)" article, I cover how to use a Power Automate Flow or Azure Automation to extract events from the Office 365 activity logs. 
+
+Once enabled, Create, Update and Delete actions taken by administrators will source to the Office 365 Security and Compliance center. Below is an image showing the three different activity records for Data Loss Prevention Policies.
+
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/DlpAndSubscriptions/O365Security.DLP.JPG" />
+
+In the image below within the Update DLP Policy activity, we can see that the additionalInfo property contains details of the action taken. In the image, an administrator (or someone with appropriate access) has exempted a resource from our Personal Productivity DLP policy:
+
+<insert DLP exempt image>
+
+Here is the output of the additionalInfo detailing the application that is now exempt. Governance administrators can see both the object identifier as well as the type, in this case a Power App.
+
+```
+{"policyId":"9e390645-f564-4734-a5a0-3b9d8221304b","policyType":"OnlyEnvironments","defaultConnectorClassification":"Blocked","changeSet":{"exemptResourcesChanges":[{"name":"/providers/Microsoft.PowerApps/apps/93425669-ff6b-4fef-bccb-4f3ef0688007","currentValue":{"id":"/providers/Microsoft.PowerApps/apps/93425669-ff6b-4fef-bccb-4f3ef0688007","type":"Microsoft.PowerApps/apps"}}]}}
+```
+
+Here is the logical flow for extracting and storing within Cosmos DB, courtesy of **Amreek Singh**. The destination can easily be changed to a data store of choice such as Azure Blob Storage used for Azure Data Lake.
+
+![](https://cloudblogs.microsoft.com/uploads/prod/sites/4/2019/06/Solution-Architecture-2-1024x165.png)
 
 
-### Governance
 
-Governance on exempted resources is extremely important and I recommend having a process that runs regularly to identify the exempted resources. If this number grows or shrinks we should alert the appropriate channels to take action. Alternatively, an automated approach can be taken to ensure non-exempted resources are allowed to be added. Let's look at the below architecture:
+### Ingesting Office 365 Management Activity API and Audit Reports with Azure Automation
 
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/Connectors/DLP/DlpPolicyNamefromUrlToPowerShell.JPG" style="zoom: 80%;" />
+Utilizing **Azure Log Analytics** or **Azure Application Insights** offers native integration with additional monitoring tools to help detect anomalies. Tools such as [**Azure Sentinel**](https://docs.microsoft.com/en-us/azure/sentinel/overview), offering a Security Information Event Management ([**SIEM**](https://en.wikipedia.org/wiki/Security_information_and_event_management)) and Security Orchestration Automated Response (**SOAR**), or [**Azure Monitoring**](https://docs.microsoft.com/en-us/azure/azure-monitor/overview), offering analysis detection solutions, are perfect for this.
 
-## 
+<insert azure sentinel image>
 
-## Logging DLP to Log Analytics
+### Ingesting DLP SDK data with PowerShell and Azure Automation
+
+
 
 ## Wrap Up
