tenant level analytics sql

--- a/docs/05.02 - Logging and Monitoring DLP Policies.md
+++ b/docs/05.02 - Logging and Monitoring DLP Policies.md
@@ -2,21 +2,21 @@
 
 ## Policy Summary
 
+[**Data Loss Prevention Policies**](https://docs.microsoft.com/en-us/power-platform/admin/wp-data-loss-prevention) help protect and secure organizational data within an enterprise by providing rules enforcing what connectors can be used. **Connectors** can be grouped into **Business**, **Non-Business** and **Blocked** classifications which determine if they can be used within **Power Apps** or **Flows**. These **policies can be scoped to a specific environment or across all environments** within a tenant.
+
 ## Locking Down v Opening Up and Alerting on an environment
 
-DLP Policies allow administrators the ability to add governance to a Dataverse environment used by licensed users within the tenant. Depending on the nature of the environment administrators may choose to go with various approaches on what connectors makers and users can interact with. Power User environments for instance may allow for more flexibility than environments used as personal productivity environments. For personal productivity environments these are highly restricted, this helps reduce intermingling of business and non-business as well as data or licensing sprawl. I highly recommend reviewing Denise Moran's article [Establishing an Environment Strategy for Microsoft Power Platform | Microsoft Power Apps](https://powerapps.microsoft.com/en-us/blog/establishing-an-environment-strategy-for-microsoft-power-platform/) for guidance on environment strategies. The article also documents how to establish DLP policies for these environments:
+As mentioned earlier, DLP Policies allow administrators the ability to add governance to a Dataverse environment used by licensed users within the tenant. Depending on the nature of the environment administrators may choose to go with various approaches on what connectors makers and users can interact with. Power User environments for instance may allow for more flexibility than environments used as personal productivity environments. Personal productivity environment policies generally are highly restricted. This helps reduce intermingling of business and non-business as well as data or licensing sprawl. I highly recommend reviewing Denise Moran's article [Establishing an Environment Strategy for Microsoft Power Platform | Microsoft Power Apps](https://powerapps.microsoft.com/en-us/blog/establishing-an-environment-strategy-for-microsoft-power-platform/) for guidance on environment strategies. The article also documents how to establish DLP policies for these environments:
 
-Personal Productivity:
+**<u>Personal Productivity:</u>**
 
 "To reduce risk to data, the types of connectors used in your apps and flows should be limited to a less permissive data loss prevention (DLP) policy. This policy should cover common individual and small team productivity use cases, like working with SharePoint data, sending emails, and having an approval workflow."
 
-Power Users:
+**<u>Power Users:</u>**
 
 "For this purpose, we recommend creating a power user environment. This shared environment should use mre permissive DLP policies and admins should control the maker list to this environment."
 
 I typically see environments used for production workloads well vetted and locked down with DLP policies than standard maker environments. 
-
-
 
 ### Disable trials
 
@@ -120,6 +120,8 @@ In the image below within the Update DLP Policy activity, we can see that the ad
 
 <insert DLP exempt image>
 
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/DlpAndSubscriptions/AzureSentinel.jpg" />
+
 Here is the output of the additionalInfo detailing the application that is now exempt. Governance administrators can see both the object identifier as well as the type, in this case a Power App.
 
 ```
@@ -136,10 +138,12 @@ Here is the logical flow for extracting and storing within Cosmos DB, courtesy o
 
 Utilizing **Azure Log Analytics** or **Azure Application Insights** offers native integration with additional monitoring tools to help detect anomalies. Tools such as [**Azure Sentinel**](https://docs.microsoft.com/en-us/azure/sentinel/overview), offering a Security Information Event Management ([**SIEM**](https://en.wikipedia.org/wiki/Security_information_and_event_management)) and Security Orchestration Automated Response (**SOAR**), or [**Azure Monitoring**](https://docs.microsoft.com/en-us/azure/azure-monitor/overview), offering analysis detection solutions, are perfect for this.
 
-<insert azure sentinel image>
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/DlpAndSubscriptions/AzureSentinel.jpg" />
 
 ### Ingesting DLP SDK data with PowerShell and Azure Automation
 
+cc
 
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/DlpAndSubscriptions/PowerAppsPowerShellAutomationAndMonitor.JPG" />
 
 ## Wrap Up
