added desktop analytics draft

--- a/docs/04.03.01 - Monitoring Power Automate - Power Automate Desktop Analytics.md
+++ b/docs/04.03.01 - Monitoring Power Automate - Power Automate Desktop Analytics.md
@@ -12,12 +12,33 @@ This article begins by discussing the concept of **solution aware flows**. After
 
 Power Automate Desktop provides organizations a complete solution to bridge gaps between modern and legacy systems. Most modern systems today
 
-## Using the Maker Portal to view Power Automate Desktop actions runs
+### The flow session table
+Each Power Automate Desktop flow run will be stored within a table named [flowsession](https://docs.microsoft.com/en-us/power-apps/developer/data-platform/reference/entities/flowsession). Within the table, properties describing the run including when it ran, which gateway and machine it was run on, was it successful and if not the included error code and details.
 
-The flow session table
 
-Extracting flow session context
 
+## Extracting flow session context
+Extracting Power Automate Desktop flow run information can be done in multiple ways depending on your organization's current needs and scale. The below sections will cover using the Power Apps Maker Portal and tools such as the Center of Excellence.
+
+As your organization grows its usage of Power Automate Desktop being able to leverage analytical services such as directly accessing the API, accessing the replica database and finally connecting to the Azure Data Lake.
+
+### Using the Maker Portal to view Power Automate Desktop actions runs
+<!-- <u>Solution Aware Flows:</u> -->
+
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomate/SolutionAwareFlows.JPG" style="zoom:50%;" />
+
+### Dataverse API
+https://alyousse.crm.dynamics.com/api/data/v9.2/flowsessions?$top=100&$filter=_regardingobjectid_value%20eq%2031871a4b-f766-40bc-8247-0a37595ca679
+
+### Using the Center of Excellence or SQL Replica
+At the time of this writing the Center of Excellence or COE collects desktop flow runs within the inventory components. https://docs.microsoft.com/en-us/power-platform/guidance/coe/setup-core-components.
+To hit the SQL Replica, you can leverage the TDS endpoint. https://docs.microsoft.com/en-us/power-apps/developer/data-platform/dataverse-sql-query
+
+
+
+### Using the SQL Replica
+
+### Using the Data Export
 
 
 ## Next Steps
